--- a/pages/blog2.html
+++ b/pages/blog2.html
@@ -11,20 +11,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="hero">
-    <div>.
+    <div class="space">
     </div>
-    <div id="nav-bar" >
-        <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
-        <h5>Bio-Growth</h5>
-        <ul>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./consulting-page.html">Consulting</a></li>
-            <li><a href="./blog-page.html">Blog</a></li>
-            <li><a href="./about-us.html">Company</a></li>    
+    <div class="navbar">
+        <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+        <ul class="links">
+            <li>
+                <a href="./product.html">products</a>
+                <a href="./consulting-page.html">consulting</a>
+                <a href="./blog-page.html">Blog</a>
+                <a href="./about-us.html">Company</a>
+            </li>
         </ul>
-       <button id="btn-2" onclick="login()">Log in</button>
-       <button id="btn-1" onclick="signup()">Sign Up</button>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
+        <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
+    </div>
+    <div class="dropdown_menu open"> 
+        <ul class="links">
+            <li>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
+            </li>
+        </ul>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
     </div>
     <!-- <div id="nav-bar" >
         <a href="/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
@@ -49,7 +62,7 @@
     </div>
     
     <div class="blog-write-up">
-        As the foundation of agriculture, soil health plays a crucial role in the success and sustainability of farming practices. Healthy soil not only <br> provides essential nutrients for plant growth but also supports biodiversity, water retention, and carbon sequestration. In this guide, we'll explore <br> the importance of soil health in sustainable farming and highlight key practices to improve and maintain soil health on your farm. <br>
+        As the foundation of agriculture, soil health plays a crucial role in the success and sustainability of farming practices. Healthy soil not only provides essential nutrients for plant growth but also supports biodiversity, water retention, and carbon sequestration. In this guide, we'll explore the importance of soil health in sustainable farming and highlight key practices to improve and maintain soil health on your farm. 
 
 <div class="space"></div>
 
@@ -57,9 +70,9 @@
 
 <div class="space"></div>
 
-Soil health refers to the capacity of soil to function as a living ecosystem that sustains plant and animal life while maintaining environmental <br> quality. Healthy soil is characterized by a balance of physical, chemical, and biological properties, including: <br>
+Soil health refers to the capacity of soil to function as a living ecosystem that sustains plant and animal life while maintaining environmental quality. Healthy soil is characterized by a balance of physical, chemical, and biological properties, including: 
 <div class="space"></div> 
-<span>1.</span> Adequate nutrient levels for plant growth <br>
+<span>1.</span> Adequate nutrient levels for plant growth 
 <div class="space"></div>
 <span>2.</span> Good soil structure and texture <br>
 <div class="space"></div>
@@ -70,45 +83,47 @@ Soil health refers to the capacity of soil to function as a living ecosystem tha
 
 <span>Key Practices for Soil Health</span> <br>
 <div class="space"></div>
-<span>1.Cover Cropping:</span> Planting cover crops such as legumes, grasses, and clovers during fallow periods or between cash crops helps protect and enrich the soil. Cover crops reduce erosion, improve soil structure, suppress weeds, and add organic matter when they decompose. <br>
+<span>1.Cover Cropping:</span> Planting cover crops such as legumes, grasses, and clovers during fallow periods or between cash crops helps protect and enrich the soil. Cover crops reduce erosion, improve soil structure, suppress weeds, and add organic matter when they decompose.
 <div class="space"></div>
-<span>2.Crop Rotation:</span> Rotating crops in a systematic sequence helps break pest and disease cycles, improves soil fertility, and prevents soil depletion. <br> Rotating crops with different nutrient requirements and root structures also enhances soil biodiversity and resilience. <br>
+<span>2.Crop Rotation:</span> Rotating crops in a systematic sequence helps break pest and disease cycles, improves soil fertility, and prevents soil depletion. Rotating crops with different nutrient requirements and root structures also enhances soil biodiversity and resilience. 
 <div class="space"></div>
-<span>3.Reduced Tillage:</span> Minimizing tillage or adopting conservation tillage practices helps preserve soil structure, minimize erosion, and retain soil <br> moisture. Reduced tillage also promotes the growth of soil organic matter and microbial activity, enhancing soil health over time. <br>
+<span>3.Reduced Tillage:</span> Minimizing tillage or adopting conservation tillage practices helps preserve soil structure, minimize erosion, and retain soil moisture. Reduced tillage also promotes the growth of soil organic matter and microbial activity, enhancing soil health over time. 
 <div class="space"></div>
-<span>4.Nutrient Management:</span> Implementing precision nutrient management practices ensures that crops receive the right <br> nutrients in the right amounts at the right time. Soil testing, nutrient budgeting, and targeted fertilizer application help optimize nutrient use efficiency and minimize nutrient runoff. <br>
+<span>4.Nutrient Management:</span> Implementing precision nutrient management practices ensures that crops receive the right nutrients in the right amounts at the right time. Soil testing, nutrient budgeting, and targeted fertilizer application help optimize nutrient use efficiency and minimize nutrient runoff. 
 
 <div class="space"></div>
-<span>5.Organic Matter Addition:</span> Adding organic matter to the soil through practices such as composting, manure application, and crop residues <br> recycling improves soil structure, water retention, and nutrient cycling. Organic matter serves as a food source for soil microbes and contributes <br> to long-term soil fertility and resilience. <br>
+<span>5.Organic Matter Addition:</span> Adding organic matter to the soil through practices such as composting, manure application, and crop residues recycling improves soil structure, water retention, and nutrient cycling. Organic matter serves as a food source for soil microbes and contributes to long-term soil fertility and resilience. 
 
 <div class="space"></div>
 <span>Benefits of Soil Health Practices</span><br>
 
-<span>1.Improved Crop Yields:</span> Healthy soil supports robust root development, nutrient uptake, and plant growth, resulting in higher crop yields and <br> improved crop quality.
+<span>1.Improved Crop Yields:</span> Healthy soil supports robust root development, nutrient uptake, and plant growth, resulting in higher crop yields and improved crop quality.
 
 <div class="space"></div>
-<span>2.Enhanced Water Management:</span> Healthy soil with good structure and organic matter content retains moisture more effectively, reducing the <br> need for irrigation and minimizing water runoff and erosion. <br>
+<span>2.Enhanced Water Management:</span> Healthy soil with good structure and organic matter content retains moisture more effectively, reducing the need for irrigation and minimizing water runoff and erosion.
 <div class="space"></div>
-<span>3.Reduced Environmental Impact:</span> Sustainable soil management practices minimize soil erosion, nutrient leaching, and runoff, reducing the <br> environmental impact of farming operations and preserving natural resources. <br>
+<span>3.Reduced Environmental Impact:</span> Sustainable soil management practices minimize soil erosion, nutrient leaching, and runoff, reducing the environmental impact of farming operations and preserving natural resources.
 <div class="space"></div>
-<span>4.Resilience to Climate Change:</span> Healthy soils with high organic matter content and biodiversity are more resilient to extreme weather events, <br> such as droughts and floods, associated with climate change. <br>
+<span>4.Resilience to Climate Change:</span> Healthy soils with high organic matter content and biodiversity are more resilient to extreme weather events, such as droughts and floods, associated with climate change. <br>
 
 <span>Implementing Soil Health Practices on Your Farm</span><br>
 
-<span>1.Assess Soil Health:</span> Conduct soil tests to assess soil health and identify areas for improvement. Consider factors such as soil texture, pH, nutrient <br> levels, and organic matter content.
+<span>1.Assess Soil Health:</span> Conduct soil tests to assess soil health and identify areas for improvement. Consider factors such as soil texture, pH, nutrient levels, and organic matter content.
 <div class="space"></div>
 
-<span>2.Plan and Implement:</span> Develop a soil health management plan tailored to your farm's specific needs and conditions. Incorporate practices such as <br> cover cropping, crop rotation, and reduced tillage into your cropping system. <br>
+<span>2.Plan and Implement:</span> Develop a soil health management plan tailored to your farm's specific needs and conditions. Incorporate practices such as cover cropping, crop rotation, and reduced tillage into your cropping system. <br>
 <div class="space"></div>
-<span>3.Monitor and Adapt:</span> Regularly monitor soil health indicators and crop performance to evaluate the effectiveness of your soil health practices. <br> Be prepared to adapt and refine your strategies based on monitoring results and changing environmental conditions. <br>
+<span>3.Monitor and Adapt:</span> Regularly monitor soil health indicators and crop performance to evaluate the effectiveness of your soil health practices. Be prepared to adapt and refine your strategies based on monitoring results and changing environmental conditions. <br>
 
-<span>4.Invest in Education:</span> Stay informed about the latest research, best practices, and innovations in soil health management. Attend workshops, <br> conferences, and extension programs to learn from experts and fellow farmers. <br>
+<span>4.Invest in Education:</span> Stay informed about the latest research, best practices, and innovations in soil health management. Attend workshops, conferences, and extension programs to learn from experts and fellow farmers. <br>
 
-Precision agriculture holds immense promise for the future of farming, offering farmers the tools and technologies they need to navigate the <br> complexities of modern agriculture with precision and efficiency. By embracing precision agriculture principles and investing in innovative <br> techntologies, farmers can unlock new opportunities for sustainable growth, increased profitability, and healthier crops for generations to come. come <br>
-<div class="space"></div>    
+Precision agriculture holds immense promise for the future of farming, offering farmers the tools and technologies they need to navigate the complexities of modern agriculture with precision and efficiency. By embracing precision agriculture principles and investing in innovative techntologies, farmers can unlock new opportunities for sustainable growth, increased profitability, and healthier crops for generations to come <br>
+<div class="space"></div>  
+
 <span>Conclusion</span> <br>
+
 <div class="space"></div>
-Soil health is the cornerstone of sustainable farming, providing the foundation for productive and resilient agricultural systems. By implementing <br> key soil health practices such as cover cropping, crop rotation, reduced tillage, and nutrient management, farmers can enhance soil fertility, <br> improve crop yields, and safeguard the long-term viability of their farms. Investing in soil health is not only essential for the success of individual <br> farms but also critical for the health of our planet and future generations. <br>
+Soil health is the cornerstone of sustainable farming, providing the foundation for productive and resilient agricultural systems. By implementing key soil health practices such as cover cropping, crop rotation, reduced tillage, and nutrient management, farmers can enhance soil fertility, improve crop yields, and safeguard the long-term viability of their farms. Investing in soil health is not only essential for the success of individual farms but also critical for the health of our planet and future generations. <br>
 
 </div>
     
