--- a/pages/blog3.html
+++ b/pages/blog3.html
@@ -11,20 +11,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="hero">
-    <div>.
+    <div class="space">
     </div>
-    <div id="nav-bar" >
-        <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
-        <h5>Bio-Growth</h5>
-        <ul>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./consulting-page.html">Consulting</a></li>
-            <li><a href="./blog-page.html">Blog</a></li>
-            <li><a href="./about-us.html">Company</a></li>    
+    <div class="navbar">
+        <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+        <ul class="links">
+            <li>
+                <a href="./product.html">products</a>
+                <a href="./consulting-page.html">consulting</a>
+                <a href="./blog-page.html">Blog</a>
+                <a href="./about-us.html">Company</a>
+            </li>
         </ul>
-       <button id="btn-2" onclick="login()">Log in</button>
-       <button id="btn-1" onclick="signup()">Sign Up</button>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
+        <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
+    </div>
+    <div class="dropdown_menu open"> 
+        <ul class="links">
+            <li>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
+            </li>
+        </ul>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
     </div>
     <!-- <div id="nav-bar" >
         <a href="/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
@@ -49,60 +62,62 @@
     </div>
     
     <div class="blog-write-up">
-Integrated Pest Management (IPM) is a comprehensive and sustainable approach to managing pests in agriculture that emphasizes prevention, <br> monitoring, and control strategies to minimize the impact on human health, the environment, and non-target organisms. By combining <br> biological, cultural, physical, and chemical control methods, IPM offers farmers an effective and environmentally friendly alternative to <br> conventional pest management practices. In this guide, we'll explore the principles of IPM, its key components, and how farmers can implement <br> this holistic approach to pest management on their farms. <br>
+Integrated Pest Management (IPM) is a comprehensive and sustainable approach to managing pests in agriculture that emphasizes prevention, monitoring, and control strategies to minimize the impact on human health, the environment, and non-target organisms. By combining biological, cultural, physical, and chemical control methods, IPM offers farmers an effective and environmentally friendly alternative to conventional pest management practices. In this guide, we'll explore the principles of IPM, its key components, and how farmers can implement this holistic approach to pest management on their farms. <br>
 <div class="space"></div>
 <span>Understanding Integrated Pest Management</span><br>
 <div class="space"></div>
-Integrated Pest Management is based on the principle of ecosystem management, recognizing that pests are part of a complex ecological <br> system and that their management should be approached holistically. The goal of IPM is not to eradicate pests entirely but to maintain them at <br> levels that do not cause significant economic damage or harm to crops. <br>
+Integrated Pest Management is based on the principle of ecosystem management, recognizing that pests are part of a complex ecological system and that their management should be approached holistically. The goal of IPM is not to eradicate pests entirely but to maintain them at levels that do not cause significant economic damage or harm to crops. <br>
 <div class="space"></div>
 <span>Key Components of Integrated Pest Management</span> <br>
 <div class="space"></div>
-<span>1.Prevention:</span>The first step in IPM is to prevent pest problems before they occur. This includes implementing practices such as crop rotation, <br> proper sanitation, and the use of pest-resistant crop varieties to minimize pest pressure. <br>
+<span>1.Prevention:</span>The first step in IPM is to prevent pest problems before they occur. This includes implementing practices such as crop rotation, proper sanitation, and the use of pest-resistant crop varieties to minimize pest pressure. <br>
 <div class="space"></div>
-<span>2.Monitoring and Identification:</span>  Regular monitoring of crops and pest populations is essential for early detection and accurate identification <br> of pests. By monitoring pest populations, farmers can determine the need for intervention and select the most appropriate control methods. <br>
+<span>2.Monitoring and Identification:</span>  Regular monitoring of crops and pest populations is essential for early detection and accurate identification of pests. By monitoring pest populations, farmers can determine the need for intervention and select the most appropriate control methods. <br>
 <div class="space"></div>
-<span>3.Cultural Controls:</span> Cultural practices, such as crop diversification, habitat manipulation, and timing of planting, can help reduce pest <br> populations and enhance the resilience of crops to pest damage. <br>
+<span>3.Cultural Controls:</span> Cultural practices, such as crop diversification, habitat manipulation, and timing of planting, can help reduce pest populations and enhance the resilience of crops to pest damage. <br>
 <div class="space"></div>
-<span>4.Biological Controls:</span> Biological control methods involve the use of natural enemies, such as predators, parasites, and pathogens, to suppress <br> pest populations. Examples include releasing beneficial insects or introducing microbial agents to control pest populations. <br>
+<span>4.Biological Controls:</span> Biological control methods involve the use of natural enemies, such as predators, parasites, and pathogens, to suppress pest populations. Examples include releasing beneficial insects or introducing microbial agents to control pest populations. <br>
 <div class="space"></div>
-<span>5.Physical Controls:</span>  Physical control methods, such as trapping, mulching, and barriers, can be used to physically exclude pests from crops or  <br> disrupt their life cycle. These methods are often effective for managing pests in a targeted and environmentally friendly manner. <br>
+<span>5.Physical Controls:</span>  Physical control methods, such as trapping, mulching, and barriers, can be used to physically exclude pests from crops or disrupt their life cycle. These methods are often effective for managing pests in a targeted and environmentally friendly manner. <br>
 <div class="space"></div>
-<span>6.Chemical Controls (as a last resort):</span>  Chemical pesticides should be used as a last resort in IPM and only when necessary. When used, <br> pesticides should be selected based on their effectiveness, target specificity, and minimal impact on non-target organisms and the <br> environment.
+<span>6.Chemical Controls (as a last resort):</span>  Chemical pesticides should be used as a last resort in IPM and only when necessary. When used, pesticides should be selected based on their effectiveness, target specificity, and minimal impact on non-target organisms and the environment.
 <div class="space"></div>
 <span>Benefits of Integrated Pest Management</span>
 <div class="space"></div>
-<span>1.Reduced Chemical Use:</span>  By emphasizing non-chemical control methods and targeted pesticide applications, IPM reduces reliance on <br> conventional pesticides, minimizing the risk of pesticide resistance, environmental contamination, and human health concerns. <br>
+<span>1.Reduced Chemical Use:</span>  By emphasizing non-chemical control methods and targeted pesticide applications, IPM reduces reliance on conventional pesticides, minimizing the risk of pesticide resistance, environmental contamination, and human health concerns. <br>
 <div class="space"></div>
-<span>2.Enhanced Crop Health and Quality:</span> IPM promotes the use of preventive measures and holistic approaches to pest management, resulting <br> in healthier, more resilient crops with fewer pest-related issues and higher market value. <br>
+<span>2.Enhanced Crop Health and Quality:</span> IPM promotes the use of preventive measures and holistic approaches to pest management, resulting in healthier, more resilient crops with fewer pest-related issues and higher market value. <br>
 <div class="space"></div>
-<span>3.Environmental Protection:</span> By minimizing pesticide use and promoting ecosystem-based approaches to pest management, IPM protects <br> biodiversity, soil health, and water quality, contributing to a more sustainable and environmentally friendly agricultural system. <br> 
+<span>3.Environmental Protection:</span> By minimizing pesticide use and promoting ecosystem-based approaches to pest management, IPM protects biodiversity, soil health, and water quality, contributing to a more sustainable and environmentally friendly agricultural system. <br> 
 <div class="space"></div>
-<span>4.Cost Savings:</span> While initial implementation costs may be higher, IPM can lead to long-term cost savings by reducing the need for chemical <br> inputs, increasing crop yields, and minimizing pest-related crop losses. <br>
+<span>4.Cost Savings:</span> While initial implementation costs may be higher, IPM can lead to long-term cost savings by reducing the need for chemical inputs, increasing crop yields, and minimizing pest-related crop losses. <br>
 <div class="space"></div>
 <span>Implementing Integrated Pest Management on Your Farm</span>
 <div class="space"></div>
-<span>1.Assess Pest Pressure:</span>  Identify key pest species and their life cycles, as well as factors contributing to pest outbreaks, such as environmental <br> conditions and crop management practices. <br>
+<span>1.Assess Pest Pressure:</span>  Identify key pest species and their life cycles, as well as factors contributing to pest outbreaks, such as environmental conditions and crop management practices. <br>
 <div class="space"></div>
-<span>2.Develop a Pest Management Plan:</span> Based on your pest assessment, develop a comprehensive pest management plan that integrates <br> preventive measures, monitoring protocols, and control strategies tailored to your farm's specific needs. <br>
+<span>2.Develop a Pest Management Plan:</span> Based on your pest assessment, develop a comprehensive pest management plan that integrates preventive measures, monitoring protocols, and control strategies tailored to your farm's specific needs. <br>
 <div class="space"></div>
-<span>3.Monitor Pest Populations:</span>  Regularly monitor pest populations using a combination of visual inspections, trapping techniques, and monitoring <br> tools to assess pest levels and determine the need for intervention. <br>
+<span>3.Monitor Pest Populations:</span>  Regularly monitor pest populations using a combination of visual inspections, trapping techniques, and monitoring tools to assess pest levels and determine the need for intervention. <br>
 <div class="space"></div>
-<span>4.Implement Control Measures:</span> SImplement a combination of cultural, biological, physical, and chemical control methods as appropriate to <br> manage pest populations effectively while minimizing environmental impact and non-target effects. <br>
+<span>4.Implement Control Measures:</span> SImplement a combination of cultural, biological, physical, and chemical control methods as appropriate to manage pest populations effectively while minimizing environmental impact and non-target effects. <br>
 <div class="space"></div>
-<span>5.Evaluate and Adjust:</span> Continuously evaluate the effectiveness of your IPM program and make adjustments as needed based on monitoring <br> data, pest pressure, and crop performance. Incorporate lessons learned and best practices to refine your pest management strategies over time. <br>
+<span>5.Evaluate and Adjust:</span> Continuously evaluate the effectiveness of your IPM program and make adjustments as needed based on monitoring data, pest pressure, and crop performance. Incorporate lessons learned and best practices to refine your pest management strategies over time. <br>
 <div class="space"></div>
 <span>Conclusion</span> <br>
 <div class="space"></div>
-Integrated Pest Management offers farmers a holistic and sustainable approach to pest management that balances effective pest control with <br> environmental protection and crop health. By integrating preventive measures, monitoring protocols, and a variety of control strategies, farmers <br> can effectively manage pests while minimizing the reliance on chemical pesticides and promoting the long-term health and resilience of their <br> crops and ecosystems. Adopting IPM practices not only benefits individual farms but also contributes to a more sustainable and environmentally <br> friendly agricultural system for future generations. <br>
+Integrated Pest Management offers farmers a holistic and sustainable approach to pest management that balances effective pest control with environmental protection and crop health. By integrating preventive measures, monitoring protocols, and a variety of control strategies, farmers can effectively manage pests while minimizing the reliance on chemical pesticides and promoting the long-term health and resilience of their crops and ecosystems. Adopting IPM practices not only benefits individual farms but also contributes to a more sustainable and environmentally friendly agricultural system for future generations. <br>
 <div class="space"></div>
 </div>
 <div class="space"></div>
+
+</div>
 
 <div class="newsletter">
         <h1>Subscribe to our Newsletter</h1>
         <div class="newsletter-user-info">
             <input type="text" placeholder=" Your email address">
-            <button>join now</button>
+            <button>join</button>
         </div>
     </div>
     <div class="connect">
@@ -114,7 +129,6 @@ Integrated Pest Management offers farmers a holistic and sustainable approach to
             <a href=""><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </div>
-</div>
 
 <div class="footer">
     <img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt="">
