--- a/pages/blog5.html
+++ b/pages/blog5.html
@@ -4,27 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio-Growth Agro Tech</title>
-    <link rel="stylesheet" href="../css/pages/blog4.css">
+    <link rel="stylesheet" href="../css/pages/blog1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="hero">
-    <div>.
+    <div class="space">
     </div>
-    <div id="nav-bar" >
-        <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
-        <h5>Bio-Growth</h5>
-        <ul>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./consulting-page.html">Consulting</a></li>
-            <li><a href="./blog-page.html">Blog</a></li>
-            <li><a href="./about-us.html">Company</a></li>    
+    <div class="navbar">
+        <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+        <ul class="links">
+            <li>
+                <a href="./product.html">products</a>
+                <a href="./consulting-page.html">consulting</a>
+                <a href="./blog-page.html">Blog</a>
+                <a href="./about-us.html">Company</a>
+            </li>
         </ul>
-       <button id="btn-2" onclick="login()">Log in</button>
-       <button id="btn-1" onclick="signup()">Sign Up</button>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
+        <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
+    </div>
+    <div class="dropdown_menu open"> 
+        <ul class="links">
+            <li>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
+            </li>
+        </ul>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
     </div>
     <!-- <div id="nav-bar" >
         <a href="/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
@@ -49,7 +62,7 @@
     </div>
     
     <div class="blog-write-up">
-        A healthy and productive poultry flock is the backbone of a successful poultry farm. At Bio Growth, we understand the unique nutritional needs of <br> poultry and have developed a balanced feed that ensures optimal health and growth. Our scientifically formulated feed is designed to support <br> rapid development, robust health, and efficient production. <br>
+        A healthy and productive poultry flock is the backbone of a successful poultry farm. At Bio Growth, we understand the unique nutritional needs of poultry and have developed a balanced feed that ensures optimal health and growth. Our scientifically formulated feed is designed to support rapid development, robust health, and efficient production. <br>
 <div class="space"></div>
 
 <span>Key Benefits of Bio Growth’s Poultry Feed:</span>
@@ -102,21 +115,22 @@
 A poultry farm in the Midwest saw a 25% increase in egg production within three months of switching to Bio Growth’s feed. The farmer reported healthier hens, fewer incidences of disease, and higher quality eggs. <br>
     </div>
     
-    <div class="newsletter">
-        <h1>Subscribe to our Newsletter</h1>
-        <div class="newsletter-user-info">
-            <input type="text" placeholder=" Your email address">
-            <button>join now</button>
-        </div>
+</div>
+
+<div class="newsletter">
+    <h1>Subscribe to our Newsletter</h1>
+    <div class="newsletter-user-info">
+        <input type="text" placeholder=" Your email address">
+        <button>join now</button>
     </div>
-    <div class="connect">
-        <h1>Connect with us on</h1>
-        <div class="connect-with-us">
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-        </div>
+</div>
+<div class="connect">
+    <h1>Connect with us on</h1>
+    <div class="connect-with-us">
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-linkedin"></i></a>
     </div>
 </div>
 
