--- a/pages/product.html
+++ b/pages/product.html
@@ -131,7 +131,7 @@
     </div>
     <div class="growth-plan-product">
         <div class="product-1">
-            <p>Bio-Mulch Organic Mulching Material</p>
+            <p>Bio-Mulch Organic <br> Mulching Material</p>
             <img src="../assets/images/2ded4c7d1673dbf28a14a7035e379ec5.png" alt="">
             <i>Not Availaible in your plan</i>
         </div>
