--- a/pages/consulting-page.html
+++ b/pages/consulting-page.html
@@ -108,7 +108,7 @@
         <h1>Subscribe to our Newsletter</h1>
         <div class="newsletter-user-info">
             <input type="text" placeholder=" Your email address">
-            <button>join now</button>
+            <button>join</button>
         </div>
     </div>
     <div class="connect">
