--- a/pages/payment.html
+++ b/pages/payment.html
@@ -34,14 +34,14 @@
     <div class="account-info">
         <div class="account-dashboard">
             <h1>Account Dashboard</h1>
-            <p><i class="fa-regular fa-user"></i>User Profile</p>
-            <p><i class="fa-regular fa-chart-bar"></i>Analytics Form</p>
-            <p><i class="fa-solid fa-tractor"></i>Track Order</p>
-            <p><i class="fa-regular fa-credit-card"></i>Payment Methods</p>
-            <p><i class="fa-solid fa-bell"></i>Notificaton</p>
-            <p><i class="fa-solid fa-bars-progress"></i>Manage Subscription</p>
-            <p><i class="fa-solid fa-headset"></i>Support and Help center</p>
-            <p id="log-out" ><i class="fa-solid fa-right-from-bracket"></i>Log out</p>
+            <a href="./account.html"><p><i class="fa-regular fa-user"></i>User Profile</p></a>
+            <a href="./analytics.html"><p><i class="fa-regular fa-chart-bar"></i>Analytics Form</p></a>
+            <a href="./tracking-page.html"><p><i class="fa-solid fa-tractor"></i>Track Order</p></a>
+            <a href="./payment.html"><p class="focus"><i class="fa-regular fa-credit-card"></i>Payment Methods</p></a>
+            <a href="./notification.html"><p><i class="fa-solid fa-bell"></i>Notificaton</p></a>
+            <a href="./manage-subscription.html"><p><i class="fa-solid fa-bars-progress"></i>Manage Subscription</p></a>
+            <a href="./support.html"><p><i class="fa-solid fa-headset"></i>Support and Help center</p></a>
+            <a href="./logout.html"><p id="log-out" ><i class="fa-solid fa-right-from-bracket"></i>Log out</p></a>
         </div>
         <div class="analytics-form-1">
             <div class="general-info">
