--- a/pages/logout.html
+++ b/pages/logout.html
@@ -15,7 +15,8 @@
         Log out ?</p>
     
         <div class="logout-btn">
-            <button id="btn-1">logout</button>
-            <button id="btn-2">cancel</button>
+            <a href="/index.html"><button id="btn-1">logout</button></a>
+            <a href="./account.html"><button id="btn-2">cancel</button></a>
         </div>
 </body>
+
