--- a/pages/review-page.html
+++ b/pages/review-page.html
@@ -12,24 +12,24 @@
 
 </head>
 <body>
-    <div class="hero">
-        <div>.
+    <div class="space">
+    </div>
+    <div class="navbar">
+        <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+        <ul class="links">
+            <li>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
+            </li>
+        </ul>
+        <div class="user-info">
+            <p>cart</p>
+            <i>7</i>
+            <img src="../assets/images/3c0543911ffeb847e003cd407bbfecca.jpeg" alt="">
         </div>
-        <div id="nav-bar" >
-            <a href="../hero-page/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
-            <h5>Bio-Growth</h5>
-            <ul>
-                <li><a href="#our-products">Products</a></li>
-                <li><a href="#consulting">Consulting</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="../About-Us/about-us.html">Company</a></li>    
-            </ul>
-            <div class="user-info">
-                <p>cart</p>
-                <i>7</i>
-                <img src="../assets/images/3c0543911ffeb847e003cd407bbfecca.jpeg" alt="">
-            </div>
-        </div>
+        <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
     </div>
     <div class="customer-review-1">
         <div class="customer-review-info">
